--- a/ErolAksoyResume.MVC.UI/Areas/Admin/Views/Profile/Index.cshtml
+++ b/ErolAksoyResume.MVC.UI/Areas/Admin/Views/Profile/Index.cshtml
@@ -1,4 +1,4 @@
-﻿
+﻿@model ErolAksoyResume.Dto.Concrete.ProfileDtos.ProfileGeneralDto
 @{
     ViewData["Title"] = "Index";
     Layout = "~/Areas/Admin/Views/Shared/_Layout.cshtml";
@@ -11,9 +11,7 @@
                 <li class="nav-item">
                     <a href="" data-target="#profile" data-toggle="tab" class="nav-link active">Profile</a>
                 </li>
-                <li class="nav-item">
-                    <a href="" data-target="#messages" data-toggle="tab" class="nav-link">Messages</a>
-                </li>
+               
                 <li class="nav-item">
                     <a href="" data-target="#edit" data-toggle="tab" class="nav-link">Edit</a>
                 </li>
@@ -26,128 +24,138 @@
                         <div class="col-md-6">
                             <h6><b>About</b></h6>
                             <p>
-                                Web Designer, UI/UX Engineer
+                                @Model.About
                             </p>
-                            <h6><b>Hobbies</b></h6>
+                            <h6><b>Adress</b></h6>
                             <p>
-                                Indie music, skiing and hiking. I love the great outdoors.
+                                @Model.Adress
                             </p>
                         </div>
                         <div class="col-md-6">
                             <h6>Socials</h6>
-                            <h6><i class="fab fa-instagram fa-2x"></i>&nbsp;erolaksoy13</h6>
-                            <h6><i class="fab fa-twitter fa-2x"></i>&nbsp;eaksoy113</h6>
-                            <h6><i class="fab fa-linkedin fa-2x"></i>&nbsp;eaksoy113</h6>
-                            <h6><i class="fab fa-github fa-2x"></i>&nbsp;eaksoy113</h6>
-                            <h6><i class="fab fa-medium fa-2x"></i>&nbsp;eaksoy113</h6>
+                            <h6><i class="fab fa-instagram fa-2x"></i>&nbsp;<a target="_blank" href="http://instagram.com/@Model.Instagram">@Model.Instagram</a></h6>
+                            <h6><i class="fab fa-twitter fa-2x"></i>&nbsp;<a target="_blank" href="http://twitter.com/@Model.Twitter">@Model.Twitter</a></h6>
+                            <h6><i class="fab fa-linkedin fa-2x"></i>&nbsp;<a target="_blank" href="http://linkedin.com/in/@Model.LinkedIn">@Model.LinkedIn</a></h6>
+                            <h6><i class="fab fa-github fa-2x"></i>&nbsp;<a target="_blank" href="http://github.com/@Model.Github">@Model.Github</a></h6>
+                            <h6><i class="fab fa-medium fa-2x"></i>&nbsp;<a target="_blank" href="http://medium.com/@Model.Medium">@Model.Medium</a></h6>
                         </div>
 
                     </div>
                     <!--/row-->
                 </div>
-                <div class="tab-pane" id="messages">
-                    <h4 class="m-y-2">Recent Messages &amp; Notifications</h4>
-                    <div class="alert alert-info alert-dismissable">
-                        <a class="panel-close close" data-dismiss="alert">×</a> This is an <strong>.alert</strong>. Use this to show important messages to the user.
-                    </div>
-                    <table class="table table-hover table-striped">
-                        <tbody>
-                            <tr>
-                                <td>
-                                    <span class="pull-xs-right font-weight-bold">3 hrs ago</span> Here is your a link to the latest summary report from the..
-                                </td>
-                            </tr>
-                            <tr>
-                                <td>
-                                    <span class="pull-xs-right font-weight-bold">Yesterday</span> There has been a request on your account since that was..
-                                </td>
-                            </tr>
-                            <tr>
-                                <td>
-                                    <span class="pull-xs-right font-weight-bold">9/10</span> Porttitor vitae ultrices quis, dapibus id dolor. Morbi venenatis lacinia rhoncus.
-                                </td>
-                            </tr>
-                            <tr>
-                                <td>
-                                    <span class="pull-xs-right font-weight-bold">9/4</span> Vestibulum tincidunt ullamcorper eros eget luctus.
-                                </td>
-                            </tr>
-                        </tbody>
-                    </table>
-                </div>
+
                 <div class="tab-pane" id="edit">
                     <h4 class="m-y-2">Edit Profile</h4>
                     <!--Form-->
-                    <form role="form">
+
+                    <form asp-controller="Profile" asp-action="Edit" method="post">
+                        <input type="hidden" asp-for="@Model.Id" />
                         <div class="form-group row">
-                            <label class="col-lg-3 col-form-label form-control-label">First name</label>
+                            <label class="col-lg-3 col-form-label form-control-label" asp-for="@Model.Name"></label>
                             <div class="col-lg-9">
-                                <input class="form-control" type="text">
+                                <input asp-for="@Model.Name" class="form-control" type="text">
+                                <span class="text-danger" asp-validation-for="@Model.Name"></span>
                             </div>
                         </div>
                         <div class="form-group row">
-                            <label class="col-lg-3 col-form-label form-control-label">Last name</label>
+                            <label class="col-lg-3 col-form-label form-control-label" asp-for="@Model.LastName"></label>
                             <div class="col-lg-9">
-                                <input class="form-control" type="text">
-                            </div>
-                        </div>
-                        <div class="form-group row">
-                            <label class="col-lg-3 col-form-label form-control-label">Email</label>
-                            <div class="col-lg-9">
-                                <input class="form-control" type="email">
-                            </div>
-                        </div>
-                        <div class="form-group row">
-                            <label class="col-lg-3 col-form-label form-control-label">Company</label>
-                            <div class="col-lg-9">
-                                <input class="form-control" type="text">
-                            </div>
-                        </div>
-                        <div class="form-group row">
-                            <label class="col-lg-3 col-form-label form-control-label">Website</label>
-                            <div class="col-lg-9">
-                                <input class="form-control" type="url">
-                            </div>
-                        </div>
-                        <div class="form-group row">
-                            <label class="col-lg-3 col-form-label form-control-label">Address</label>
-                            <div class="col-lg-9">
-                                <input class="form-control" type="text" placeholder="Street">
-                            </div>
-                        </div>
-                        <div class="form-group row">
-                            <label class="col-lg-3 col-form-label form-control-label"></label>
-                            <div class="col-lg-6">
-                                <input class="form-control" type="text" value="" placeholder="City">
-                            </div>
-                            <div class="col-lg-3">
-                                <input class="form-control" type="text" value="" placeholder="State">
+                                <input asp-for="@Model.LastName" class="form-control" type="text">
+                                <span class="text-danger" asp-validation-for="@Model.LastName"></span>
                             </div>
                         </div>
 
                         <div class="form-group row">
-                            <label class="col-lg-3 col-form-label form-control-label">Username</label>
+                            <label class="col-lg-3 col-form-label form-control-label" asp-for="@Model.UserName"></label>
                             <div class="col-lg-9">
-                                <input class="form-control" type="text">
+                                <input asp-for="@Model.UserName" class="form-control" type="text">
+                                <span class="text-danger" asp-validation-for="@Model.UserName"></span>
+                            </div>
+                        </div>
+
+
+                        <div class="form-group row">
+                            <label class="col-lg-3 col-form-label form-control-label" asp-for="@Model.Adress"></label>
+                            <div class="col-lg-9">
+                                <textarea asp-for="@Model.Adress" class="form-control" type="text"></textarea>
+                                <span class="text-danger" asp-validation-for="@Model.Adress"></span>
+                            </div>
+                        </div>
+
+                        <div class="form-group row">
+                            <label class="col-lg-3 col-form-label form-control-label" asp-for="@Model.About"></label>
+                            <div class="col-lg-9">
+                                <input asp-for="@Model.About" class="form-control" type="text">
+                                <span class="text-danger" asp-validation-for="@Model.About"></span>
+                            </div>
+                        </div>
+
+
+                        <div class="form-group row">
+                            <label class="col-lg-3 col-form-label form-control-label" asp-for="@Model.Email"></label>
+                            <div class="col-lg-9">
+                                <input asp-for="@Model.Email" class="form-control" type="text">
+                                <span class="text-danger" asp-validation-for="@Model.Email"></span>
                             </div>
                         </div>
                         <div class="form-group row">
-                            <label class="col-lg-3 col-form-label form-control-label">Password</label>
+                            <label class="col-lg-3 col-form-label form-control-label" asp-for="@Model.Phone"></label>
                             <div class="col-lg-9">
-                                <input class="form-control" type="password">
+                                <input asp-for="@Model.Phone" class="form-control" type="text">
+                                <span class="text-danger" asp-validation-for="@Model.Phone"></span>
                             </div>
                         </div>
+
                         <div class="form-group row">
-                            <label class="col-lg-3 col-form-label form-control-label">Confirm password</label>
+                            <label class="col-lg-3 col-form-label form-control-label" asp-for="@Model.Twitter"></label>
                             <div class="col-lg-9">
-                                <input class="form-control" type="password">
+                                <input asp-for="@Model.Twitter" class="form-control" type="text">
+                                <span class="text-danger" asp-validation-for="@Model.Twitter"></span>
                             </div>
                         </div>
+
+
+                        <div class="form-group row">
+                            <label class="col-lg-3 col-form-label form-control-label" asp-for="@Model.Instagram"></label>
+                            <div class="col-lg-9">
+                                <input asp-for="@Model.Instagram" class="form-control" type="text">
+                                <span class="text-danger" asp-validation-for="@Model.Instagram"></span>
+                            </div>
+                        </div>
+
+
+                        <div class="form-group row">
+                            <label class="col-lg-3 col-form-label form-control-label" asp-for="@Model.LinkedIn"></label>
+                            <div class="col-lg-9">
+                                <input asp-for="@Model.LinkedIn" class="form-control" type="text">
+                                <span class="text-danger" asp-validation-for="@Model.LinkedIn"></span>
+                            </div>
+                        </div>
+
+
+                        <div class="form-group row">
+                            <label class="col-lg-3 col-form-label form-control-label" asp-for="@Model.Github"></label>
+                            <div class="col-lg-9">
+                                <input asp-for="@Model.Github" class="form-control" type="text">
+                                <span class="text-danger" asp-validation-for="@Model.Github"></span>
+                            </div>
+                        </div>
+
+
+                        <div class="form-group row">
+                            <label class="col-lg-3 col-form-label form-control-label" asp-for="@Model.Medium"></label>
+                            <div class="col-lg-9">
+                                <input asp-for="@Model.Medium" class="form-control" type="text">
+                                <span class="text-danger" asp-validation-for="@Model.Medium"></span>
+                            </div>
+                        </div>
+
+
                         <div class="form-group row">
                             <label class="col-lg-3 col-form-label form-control-label"></label>
                             <div class="col-lg-9">
                                 <input type="reset" class="btn btn-secondary" value="Cancel">
-                                <input type="button" class="btn btn-primary" value="Save Changes">
+                                <input type="submit" class="btn btn-primary" value="Save Changes">
                             </div>
                         </div>
                     </form>
@@ -156,29 +164,38 @@
             </div>
         </div>
         <div class="col-lg-4 pull-lg-8 text-xs-center">
-            <img src="//placehold.it/300" class="m-x-auto img-fluid rounded-circle" alt="avatar">
+            <input type="hidden" asp-for="@Model.ProfileImageUrl" />
+            <img src="~/img/profile/@Model.ProfileImageUrl" class="m-x-auto img-fluid rounded-circle" alt="avatar">
 
-            <h6 class="mt-2">Upload a different photo</h6>
-            @*<div class="custom-control-input">*@
-            <input type="file" value="Browse Photo" id="photoUpload" />
-            @*</div>*@
-            <span id="chooseFile" class="custom-file-control">Choose file</span>
-            
-            <div id="buttons" class="mt-3">
-                <a id="cancel" class="btn btn-warning">Cancel</a>
-                <button id="save" class="btn btn-success" type="submit">Save</button>
-            </div>
+            <form asp-action="PhotoUpload" asp-controller="Profile" enctype="multipart/form-data" method="post">
+                <input type="hidden" asp-for="@Model.Id" />
+                <h6 class="mt-2">Upload a different photo</h6>
+                @*<div class="custom-control-input">*@
+                <input type="file" accept=".jpg,.png,.jpeg" name="imgFile" value="Browse Photo" id="photoUpload" />
+                @*</div>*@
+                <span id="chooseFile" class="custom-file-control">Choose file</span>
+
+                <div id="buttons" class="mt-3">
+                    <a id="cancel" class="btn btn-warning">Cancel</a>
+                    <button id="save" class="btn btn-success" type="submit">Save</button>
+                </div>
+            </form>
         </div>
     </div>
 </div>
 <hr>
 
 @section JavaScript{
+
+    <script src="~/jqueryui/jquery-ui.min.js"></script>
+    <script src="~/lib/jquery-validation/dist/jquery.validate.min.js"></script>
+    <script src="~/lib/jquery-validation-unobtrusive/jquery.validate.unobtrusive.min.js"></script>
+
     <script>
         $("#buttons").hide();
         //$("#save").hide();
         $(document).ready(function () {
-         
+
 
             $("#photoUpload").change(function () {
                 $("#chooseFile").hide();
@@ -189,7 +206,7 @@
             $("#cancel").on("click", function () {
                 window.location.reload();
             });
-            
+
 
         });
     </script>
